# sentence_checker

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.hpp  logger_impl.cpp  logger_impl.hpp
src/sentence_checker/: CMakeLists.txt  sentence_checker.cpp  sentence_checker.hpp
test/: CMakeLists.txt  logger_mock.hpp  sentence_checker_tests.cpp
